--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start":"nodemon --inspect index.js",
+    "watch":"node-sass --watch src/resources/scss/app.scss --output src/public/css/app.css",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,12 @@
   },
   "homepage": "https://github.com/dotrongdat/blog_nodejs#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.7"
   }
 }
