--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "watch":"node-sass --watch src/resources/scss/app.scss --output src/public/css/app.css",
+    "watch": "node-sass --watch src/resources/scss/app.scss --output src/public/css/app.css",
     "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,8 +26,13 @@
   },
   "homepage": "https://github.com/dotrongdat/blog_nodejs#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.2"
+    "express-handlebars": "^5.3.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.8",
+    "mongoose": "^5.12.11",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
